# studyflow-ai

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  estudar.py  main_api.py  main_cli.py  pyproject.toml  requirements.txt  seed.py  test_db.py  test_models.py
app/core/: database.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: ai_service.py  srs_service.py
app/utils/: pdf_handler.py
data/: studyflow.db
studyflow-ui/: index.html  package-lock.json  package.json
studyflow-ui/src/: App.jsx  index.css
studyflow-ui/src/api/: api.js
studyflow-ui/src/components/: Flashcard.jsx  Navbar.jsx
studyflow-ui/src/pages/: Dashboard.jsx  Simulado.jsx  StudySession.jsx
tests/: test_pdf.py  test_srs.py
