[tool.poetry]
name = "studyflow-ai"
version = "1.0.0"
description = "Plataforma inteligente de aprendizado com IA e SRS"
authors = ["Luan Estifer Rodrigues Pereira (Zsubzeroz)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pymupdf = "^1.24.7"
python-dotenv = "^1.0.1"
google-generativeai = "^0.7.2"
google-genai = "^0.1.0"
pydantic = "^2.7.4"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
